--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": ">=0.4.5 <1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^2.0.0"
+    "grunt-include-js": "^1.0.3",
+    "grunt-sass": "^2.0.0",
+    "grunt-version-check": "^0.3.8"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
